# velocity-estimation

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  estimation_options.rst  index.rst  install.rst  neighbour_selection.rst  requirements.txt  synthetic_data.rst  usage.rst
guides/: how_to_use_2D_velocity_estimate.ipynb
tests/: example_test.py  time_delay_estimation_test.py  two_dim_velocity_estimates_test.py
velocity_estimation/: __init__.py  conditional_averaging.py  correlation.py  time_delay_estimation.py  two_dim_velocity_estimates.py  utils.py
